--- a/cursoADVweb/src/app/areaAluno/area-aluno/aluno.component.html
+++ b/cursoADVweb/src/app/areaAluno/area-aluno/aluno.component.html
@@ -84,4 +84,6 @@
 
 </div>
 
-<app-roda-pe *ngIf="!carregando"></app-roda-pe>
+<div *ngIf="!carregando" class="col-12 mt-5" style="">
+  <app-roda-pe></app-roda-pe>
+</div>
