--- a/cursoADVweb/src/app/components/roda-pe/roda-pe.component.html
+++ b/cursoADVweb/src/app/components/roda-pe/roda-pe.component.html
@@ -1,4 +1,4 @@
-<div class="w-100 p-3 d-flex flex-wrap" [style]="isMobile?'': 'margin-top: 16vh !important;'" style=" background-color: #ee5b54; color: white;">
+<div class="w-100 p-3 d-flex flex-wrap" [style]="isMobile?'': ''" style=" background-color: #ee5b54; color: white;">
   <div class="col-sm-12 col-md-3 col-lg-3 {{isMobile? '' : 'ps-4'}}">
     <div class="col-sm-6 col-md-12">
       <img src="../../assets/imgs/logoH.png" alt="" height="70">
