--- a/cursoADVweb/src/app/acesso/pages/cadastrar/cadastrar.component.scss
+++ b/cursoADVweb/src/app/acesso/pages/cadastrar/cadastrar.component.scss
@@ -1,20 +1,20 @@
 .imagem {
   background-image: url('../../../../assets/imgs/fundoLogin.png');
   width: 100%;
-  height: 80rem;
+  height: 69rem;
   background-repeat: no-repeat;
   color: #000;
   background-size: 100%;
   background-size: cover;
-  position: absolute;
+  //position: absolute;
   z-index: -2;
 }
 
 .box {
   width: 100%;
-  height: 80rem;
-  opacity: 0.9;
-  background-color: #ffb656;
+  //height: 100rem;
+  //opacity: 0.9;
+  background-color: #ffb656bd;
 }
 
 .upload_btn {
