--- a/cursoADVweb/src/app/acesso/pages/login-professor/login-professor.component.html
+++ b/cursoADVweb/src/app/acesso/pages/login-professor/login-professor.component.html
@@ -1,72 +1,74 @@
-<div *ngIf="!isMobile" class="imagem">
-  <div class="box">
+<div class="{{isMobile? '' : 'imagem'}} col-12">
+  <div class="box" style="padding-top: 8rem !important;" [style]="isMobile?'': 'height: 100vh'">
+    <div class="col-12 d-flex flex-wrap justify-content-center">
+      <div class="w-100 d-flex flex-wrap justify-content-center">
+        <img src="../../../../assets/imgs/logo.png"  alt="" height="100">
+      </div>
+      <div class="pt-3 pb-3">
+        <span style="color: rgb(14, 14, 14);" class="fs-4">ÁREA DO PROFESSOR</span>
+      </div>
+    </div>
+
+    <div class="col-12 d-flex flex-wrap justify-content-center">
+      <div class="{{isMobile?'col-12':'col-6'}} d-flex flex-wrap justify-content-center">
+        <div class="{{isMobile?'col-12':'col-8'}} d-flex flex-wrap" style="background-color: white; border-radius: 10px;">
+          <form [formGroup]="formularioLogin" class="m-4 w-100" (keyup.enter)="login()">
+            <div class="col-12">
+              <mat-form-field class="w-100">
+                <mat-label>E-mail</mat-label>
+                <input matInput type="email" formControlName="Email">
+              </mat-form-field>
+            </div>
+            <div class="col-12">
+              <mat-form-field class="w-100">
+                <mat-label>Senha</mat-label>
+                <input matInput type="{{visivel? 'text':'password'}}" formControlName="Senha">
+                <button *ngIf="visivel == true" matSuffix mat-icon-button (click)="visivel=false">
+                  <span class="material-icons">
+                    lock_open
+                  </span>
+                </button>
+                <button *ngIf="visivel == false" matSuffix mat-icon-button (click)="visivel=true">
+                  <span class="material-icons">
+                    lock
+                  </span>
+                </button>
+              </mat-form-field>
+            </div>
+            <div class="col-12" *ngIf="carregando">
+              <div class="clearfix d-flex justify-content-center">
+                <p class="fs-6"> Carregando </p>
+                <div class="spinner-border spinner-border-sm ms-2 " style="width: 1rem; height: 1rem;" role="status">
+                  <span class="sr-only"></span>
+                </div>
+              </div>
+            </div>
+          </form>
+          <div class="col-12 d-flex justify-content-end px-4 mb-4">
+            <!-- <div class="col-8 mt-2">
+                <button type="button" (click)="voltar()" class="btn btn-info text-light"><strong>VOLTAR</strong></button>
+            </div> -->
+            <div>
+              <button [disabled]="carregando" type="button" (click)="login()" class="btn {{carregando?'btn-secondary':'btn-warning'}} text-light"><strong>ENTRAR</strong></button>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
   </div>
 </div>
+
+<div class="col-12 " style="">
+  <app-roda-pe></app-roda-pe>
+</div>
+
 <div *ngIf="isMobile" style="position: absolute; z-index: -2;" class="box">
 
 </div>
 
 <!-- <h1 (click)="voltarBlog()" style="cursor: pointer;" class="ms-2" > <strong> VOLTAR </strong> </h1> -->
 
-<div class="col-12 d-flex flex-wrap justify-content-center " [style]="isMobile? 'padding-top: 2rem !important;':'padding-top: 5rem !important;'">
 
-  <div class="w-100 d-flex flex-wrap justify-content-center">
-    <img src="../../../../assets/imgs/logo.png"  alt="" height="100">
-  </div>
-  <div class="pt-3">
-    <span style="color: rgb(14, 14, 14);" class="fs-4">ÁREA DO PROFESSOR</span>
-  </div>
-</div>
-
-<div class="col-12 d-flex flex-wrap justify-content-center {{isMobile? '': 'defineTamanhoTela'}}" [style]="isMobile?'padding-top: 2rem !important;':'padding-top: 5rem !important;'">
-
-  <div class="{{isMobile?'col-12':'col-6'}} d-flex flex-wrap justify-content-center">
-    <div class="{{isMobile?'col-12':'col-8'}} d-flex flex-wrap" style="background-color: white; border-radius: 10px;">
-      <form [formGroup]="formularioLogin" class="m-4 w-100" (keyup.enter)="login()">
-        <div class="col-12">
-          <mat-form-field class="w-100">
-            <mat-label>E-mail</mat-label>
-            <input matInput type="email" formControlName="Email">
-          </mat-form-field>
-        </div>
-        <div class="col-12">
-          <mat-form-field class="w-100">
-            <mat-label>Senha</mat-label>
-            <input matInput type="{{visivel? 'text':'password'}}" formControlName="Senha">
-            <button *ngIf="visivel == true" matSuffix mat-icon-button (click)="visivel=false">
-              <span class="material-icons">
-                lock_open
-              </span>
-            </button>
-            <button *ngIf="visivel == false" matSuffix mat-icon-button (click)="visivel=true">
-              <span class="material-icons">
-                lock
-              </span>
-            </button>
-          </mat-form-field>
-        </div>
-        <div class="col-12" *ngIf="carregando">
-          <div class="clearfix d-flex justify-content-center">
-            <p class="fs-6"> Carregando </p>
-            <div class="spinner-border spinner-border-sm ms-2 " style="width: 1rem; height: 1rem;" role="status">
-              <span class="sr-only"></span>
-            </div>
-          </div>
-        </div>
-      </form>
-      <div class="col-12 d-flex justify-content-end px-4 mb-4">
-        <!-- <div class="col-8 mt-2">
-            <button type="button" (click)="voltar()" class="btn btn-info text-light"><strong>VOLTAR</strong></button>
-        </div> -->
-        <div>
-          <button [disabled]="carregando" type="button" (click)="login()" class="btn {{carregando?'btn-secondary':'btn-warning'}} text-light"><strong>ENTRAR</strong></button>
-
-        </div>
-
-      </div>
-    </div>
-  </div>
-</div>
-
-<app-roda-pe></app-roda-pe>
