--- a/cursoADVweb/src/app/acesso/pages/login/login.component.scss
+++ b/cursoADVweb/src/app/acesso/pages/login/login.component.scss
@@ -1,20 +1,19 @@
 .imagem {
   background-image: url('../../../../assets/imgs/fundoLogin.png');
   width: 100%;
-  height: 100vh;
+  //height: 100vh;
   background-repeat: no-repeat;
   color: #000;
   background-size: cover;
   background-size: 100%;
-  position: absolute;
+  //position: absolute;
   z-index: -2;
 }
 
 .box {
   width: 100%;
-  height: 100vh;
-  opacity: 0.9;
-  background-color: #ffb656;
+  //height: 100vh;
+  background-color: #ffb656bd;
 }
 
 @keyframes moveToLeft {
